--- a/rxscala/scaladoc/rx/lang/scala/Observer.html
+++ b/rxscala/scaladoc/rx/lang/scala/Observer.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="Observer$.html" title="Go to companion"><img src="../../../lib/trait_to_object_big.png" /></a>
+        <a href="Observer$.html" title="See companion object"><img src="../../../lib/trait_to_object_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1><a href="Observer$.html" title="Go to companion">Observer</a></h1> <span class="permalink">
+        <h1><a href="Observer$.html" title="See companion object">Observer</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Observer$.html" title="See companion object">object Observer</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Observer" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
@@ -54,7 +58,7 @@ call an Observer's <code>onCompleted</code> or <code>onError</code> methods exac
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="subjects/AsyncSubject.html" class="extype" name="rx.lang.scala.subjects.AsyncSubject">AsyncSubject</a>, <a href="subjects/BehaviorSubject.html" class="extype" name="rx.lang.scala.subjects.BehaviorSubject">BehaviorSubject</a>, <a href="subjects/ReplaySubject.html" class="extype" name="rx.lang.scala.subjects.ReplaySubject">ReplaySubject</a>, <a href="subjects/SerializedSubject.html" class="extype" name="rx.lang.scala.subjects.SerializedSubject">SerializedSubject</a>, <a href="Subject.html" class="extype" name="rx.lang.scala.Subject">Subject</a>, <a href="Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>, <a href="subjects/TestSubject.html" class="extype" name="rx.lang.scala.subjects.TestSubject">TestSubject</a></div>
+            <div class="subClasses hiddenContent"><a href="subjects/AsyncSubject.html" class="extype" name="rx.lang.scala.subjects.AsyncSubject">AsyncSubject</a>, <a href="subjects/BehaviorSubject.html" class="extype" name="rx.lang.scala.subjects.BehaviorSubject">BehaviorSubject</a>, <a href="subjects/ReplaySubject.html" class="extype" name="rx.lang.scala.subjects.ReplaySubject">ReplaySubject</a>, <a href="subjects/SerializedSubject.html" class="extype" name="rx.lang.scala.subjects.SerializedSubject">SerializedSubject</a>, <a href="Subject.html" class="extype" name="rx.lang.scala.Subject">Subject</a>, <a href="Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>, <a href="subjects/TestSubject.html" class="extype" name="rx.lang.scala.subjects.TestSubject">TestSubject</a>, <a href="observers/TestSubscriber.html" class="extype" name="rx.lang.scala.observers.TestSubscriber">TestSubscriber</a></div>
           </div></div>
         
 
