--- a/rxscala/scaladoc/rx/lang/scala/subscriptions/CompositeSubscription$.html
+++ b/rxscala/scaladoc/rx/lang/scala/subscriptions/CompositeSubscription$.html
@@ -28,9 +28,13 @@
         </head>
         <body class="value">
       <div id="definition">
-        <a href="CompositeSubscription.html" title="Go to companion"><img src="../../../../lib/object_to_class_big.png" /></a>
+        <a href="CompositeSubscription.html" title="See companion class"><img src="../../../../lib/object_to_class_big.png" /></a>
         <p id="owner"><a href="../../../package.html" class="extype" name="rx">rx</a>.<a href="../../package.html" class="extype" name="rx.lang">lang</a>.<a href="../package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="package.html" class="extype" name="rx.lang.scala.subscriptions">subscriptions</a></p>
-        <h1><a href="CompositeSubscription.html" title="Go to companion">CompositeSubscription</a></h1> <span class="permalink">
+        <h1><a href="CompositeSubscription.html" title="See companion class">CompositeSubscription</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="CompositeSubscription.html" title="See companion class">class CompositeSubscription</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala.subscriptions">package subscriptions</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.subscriptions.CompositeSubscription$" title="Permalink" target="_top">
         <img src="../../../../lib/permalink.png" />
       </a>
