--- a/rxscala/scaladoc/rx/lang/scala/Notification$$OnNext$.html
+++ b/rxscala/scaladoc/rx/lang/scala/Notification$$OnNext$.html
@@ -28,9 +28,13 @@
         </head>
         <body class="value">
       <div id="definition">
-        <a href="Notification$$OnNext.html" title="Go to companion"><img src="../../../lib/object_to_class_big.png" /></a>
+        <a href="Notification$$OnNext.html" title="See companion class"><img src="../../../lib/object_to_class_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="Notification$.html" class="extype" name="rx.lang.scala.Notification">Notification</a></p>
-        <h1><a href="Notification$$OnNext.html" title="Go to companion">OnNext</a></h1> <span class="permalink">
+        <h1><a href="Notification$$OnNext.html" title="See companion class">OnNext</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Notification$$OnNext.html" title="See companion class">class OnNext</a>
+            | <a href="Notification$.html" class="extype" name="rx.lang.scala.Notification">package Notification</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Notification$$OnNext$" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
