--- a/rxscala/scaladoc/rx/lang/scala/Notification.html
+++ b/rxscala/scaladoc/rx/lang/scala/Notification.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="Notification$.html" title="Go to companion"><img src="../../../lib/trait_to_object_big.png" /></a>
+        <a href="Notification$.html" title="See companion object"><img src="../../../lib/trait_to_object_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1><a href="Notification$.html" title="Go to companion">Notification</a></h1> <span class="permalink">
+        <h1><a href="Notification$.html" title="See companion object">Notification</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Notification$.html" title="See companion object">object Notification</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Notification" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
