--- a/rxscala/scaladoc/rx/lang/scala/Subject$.html
+++ b/rxscala/scaladoc/rx/lang/scala/Subject$.html
@@ -28,9 +28,13 @@
         </head>
         <body class="value">
       <div id="definition">
-        <a href="Subject.html" title="Go to companion"><img src="../../../lib/object_to_trait_big.png" /></a>
+        <a href="Subject.html" title="See companion trait"><img src="../../../lib/object_to_trait_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1><a href="Subject.html" title="Go to companion">Subject</a></h1> <span class="permalink">
+        <h1><a href="Subject.html" title="See companion trait">Subject</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Subject.html" title="See companion trait">trait Subject</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Subject$" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
