--- a/rxscala/scaladoc/rx/lang/scala/Subscriber.html
+++ b/rxscala/scaladoc/rx/lang/scala/Subscriber.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="Subscriber$.html" title="Go to companion"><img src="../../../lib/class_to_object_big.png" /></a>
+        <a href="Subscriber$.html" title="See companion object"><img src="../../../lib/class_to_object_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1><a href="Subscriber$.html" title="Go to companion">Subscriber</a></h1> <span class="permalink">
+        <h1><a href="Subscriber$.html" title="See companion object">Subscriber</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Subscriber$.html" title="See companion object">object Subscriber</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Subscriber" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
@@ -71,7 +75,10 @@ Subscribers from given <code>onNext</code>/<code>onError</code>/<code>onComplete
 </p></div><dl class="attributes block"> <dt>Self Type</dt><dd><a href="" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>[<span class="extype" name="rx.lang.scala.Subscriber.T">T</span>]</dd></dl><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
           <div class="superTypes hiddenContent"><a href="Subscription.html" class="extype" name="rx.lang.scala.Subscription">Subscription</a>, <a href="Observer.html" class="extype" name="rx.lang.scala.Observer">Observer</a>[<span class="extype" name="rx.lang.scala.Subscriber.T">T</span>], <span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
-        </div></div>
+        </div><div class="toggleContainer block">
+            <span class="toggle">Known Subclasses</span>
+            <div class="subClasses hiddenContent"><a href="observers/TestSubscriber.html" class="extype" name="rx.lang.scala.observers.TestSubscriber">TestSubscriber</a></div>
+          </div></div>
         
 
       <div id="mbrsel">
