--- a/rxscala/scaladoc/rx/lang/scala/Subscription.html
+++ b/rxscala/scaladoc/rx/lang/scala/Subscription.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="Subscription$.html" title="Go to companion"><img src="../../../lib/trait_to_object_big.png" /></a>
+        <a href="Subscription$.html" title="See companion object"><img src="../../../lib/trait_to_object_big.png" /></a>
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1><a href="Subscription$.html" title="Go to companion">Subscription</a></h1> <span class="permalink">
+        <h1><a href="Subscription$.html" title="See companion object">Subscription</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="Subscription$.html" title="See companion object">object Subscription</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.Subscription" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
@@ -53,7 +57,7 @@
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="subscriptions/CompositeSubscription.html" class="extype" name="rx.lang.scala.subscriptions.CompositeSubscription">CompositeSubscription</a>, <a href="subscriptions/MultipleAssignmentSubscription.html" class="extype" name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription">MultipleAssignmentSubscription</a>, <a href="subscriptions/SerialSubscription.html" class="extype" name="rx.lang.scala.subscriptions.SerialSubscription">SerialSubscription</a>, <a href="Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>, <a href="Worker.html" class="extype" name="rx.lang.scala.Worker">Worker</a></div>
+            <div class="subClasses hiddenContent"><a href="subscriptions/CompositeSubscription.html" class="extype" name="rx.lang.scala.subscriptions.CompositeSubscription">CompositeSubscription</a>, <a href="subscriptions/MultipleAssignmentSubscription.html" class="extype" name="rx.lang.scala.subscriptions.MultipleAssignmentSubscription">MultipleAssignmentSubscription</a>, <a href="subscriptions/SerialSubscription.html" class="extype" name="rx.lang.scala.subscriptions.SerialSubscription">SerialSubscription</a>, <a href="Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a>, <a href="observers/TestSubscriber.html" class="extype" name="rx.lang.scala.observers.TestSubscriber">TestSubscriber</a>, <a href="Worker.html" class="extype" name="rx.lang.scala.Worker">Worker</a></div>
           </div></div>
         
 
