--- a/rxscala/scaladoc/rx/lang/scala/package$$ObservableExtensions.html
+++ b/rxscala/scaladoc/rx/lang/scala/package$$ObservableExtensions.html
@@ -30,7 +30,9 @@
       <div id="definition">
         <img src="../../../lib/class_big.png" />
         <p id="owner"><a href="../../package.html" class="extype" name="rx">rx</a>.<a href="../package.html" class="extype" name="rx.lang">lang</a>.<a href="package.html" class="extype" name="rx.lang.scala">scala</a></p>
-        <h1>ObservableExtensions</h1> <span class="permalink">
+        <h1>ObservableExtensions</h1><h3><span class="morelinks"><div>Related Doc:
+            <a href="package.html" class="extype" name="rx.lang.scala">package scala</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../index.html#rx.lang.scala.package$$ObservableExtensions" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" />
       </a>
