--- a/rxscala/scaladoc/rx/lang/scala/schedulers/TrampolineScheduler.html
+++ b/rxscala/scaladoc/rx/lang/scala/schedulers/TrampolineScheduler.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="TrampolineScheduler$.html" title="Go to companion"><img src="../../../../lib/class_to_object_big.png" /></a>
+        <a href="TrampolineScheduler$.html" title="See companion object"><img src="../../../../lib/class_to_object_big.png" /></a>
         <p id="owner"><a href="../../../package.html" class="extype" name="rx">rx</a>.<a href="../../package.html" class="extype" name="rx.lang">lang</a>.<a href="../package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="package.html" class="extype" name="rx.lang.scala.schedulers">schedulers</a></p>
-        <h1><a href="TrampolineScheduler$.html" title="Go to companion">TrampolineScheduler</a></h1> <span class="permalink">
+        <h1><a href="TrampolineScheduler$.html" title="See companion object">TrampolineScheduler</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="TrampolineScheduler$.html" title="See companion object">object TrampolineScheduler</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala.schedulers">package schedulers</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.schedulers.TrampolineScheduler" title="Permalink" target="_top">
         <img src="../../../../lib/permalink.png" />
       </a>
