--- a/rxscala/scaladoc/rx/lang/scala/subjects/PublishSubject$.html
+++ b/rxscala/scaladoc/rx/lang/scala/subjects/PublishSubject$.html
@@ -30,7 +30,9 @@
       <div id="definition">
         <img src="../../../../lib/object_big.png" />
         <p id="owner"><a href="../../../package.html" class="extype" name="rx">rx</a>.<a href="../../package.html" class="extype" name="rx.lang">lang</a>.<a href="../package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="package.html" class="extype" name="rx.lang.scala.subjects">subjects</a></p>
-        <h1>PublishSubject</h1> <span class="permalink">
+        <h1>PublishSubject</h1><h3><span class="morelinks"><div>Related Doc:
+            <a href="package.html" class="extype" name="rx.lang.scala.subjects">package subjects</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.subjects.PublishSubject$" title="Permalink" target="_top">
         <img src="../../../../lib/permalink.png" />
       </a>
