--- a/rxscala/scaladoc/rx/lang/scala/subscriptions/SerialSubscription.html
+++ b/rxscala/scaladoc/rx/lang/scala/subscriptions/SerialSubscription.html
@@ -28,9 +28,13 @@
         </head>
         <body class="type">
       <div id="definition">
-        <a href="SerialSubscription$.html" title="Go to companion"><img src="../../../../lib/class_to_object_big.png" /></a>
+        <a href="SerialSubscription$.html" title="See companion object"><img src="../../../../lib/class_to_object_big.png" /></a>
         <p id="owner"><a href="../../../package.html" class="extype" name="rx">rx</a>.<a href="../../package.html" class="extype" name="rx.lang">lang</a>.<a href="../package.html" class="extype" name="rx.lang.scala">scala</a>.<a href="package.html" class="extype" name="rx.lang.scala.subscriptions">subscriptions</a></p>
-        <h1><a href="SerialSubscription$.html" title="Go to companion">SerialSubscription</a></h1> <span class="permalink">
+        <h1><a href="SerialSubscription$.html" title="See companion object">SerialSubscription</a></h1><h3><span class="morelinks"><div>
+            Related Docs:
+            <a href="SerialSubscription$.html" title="See companion object">object SerialSubscription</a>
+            | <a href="package.html" class="extype" name="rx.lang.scala.subscriptions">package subscriptions</a>
+          </div></span></h3><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.subscriptions.SerialSubscription" title="Permalink" target="_top">
         <img src="../../../../lib/permalink.png" />
       </a>
